[package]
name = "benchy"
version = "0.1.0"
authors = ["Ahtoms <me@ahtoms.xyz>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
base64 = "0.10.1"
rusqlite = "0.15.0"
zip = { git = "https://github.com/mvdnes/zip-rs.git" }

[dev-dependencies]
reqwest = "0.9.12"
